--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -30,6 +30,7 @@
         {% endif %}
         
         <title>{% block title %}Home{% endblock %}</title>
+        <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='nutrimetrics-green-heart.png')}}">
 
         {% block inline_style %}
         {% endblock%}
