--- a/website/templates/landing-page/signup.html
+++ b/website/templates/landing-page/signup.html
@@ -1,118 +1,236 @@
 {% extends "base.html" %} {% block title %}Sign up{% endblock %}
 
+{% block inline_style %}
+<link
+    rel="stylesheet"
+    href="{{url_for('static', filename='styles/signup.css')}}"
+/>
+
+{% endblock %}
 
 {% block content %}
-<div class="row d-flex flex-column align-items-center justify-content-center" style="height: calc(100vh - 80px);">
-    <div class="col-lg-12 col-xl-11">
-        <div class="row justify-content-center shadow" style="border-radius: 25px; background-color: white;">
-            <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1 p-5 rounded">
-                <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
-                <form method="POST" class="form-horizontal">
-                    <div class="form-group mb-4 d-flex flex-row align-items-center">
-                        <!-- <label for="firstName">Your Name</label> -->
-                        <i class="bi bi-person-fill fa-lg me-3 fa-fw"></i>
-                        <input 
-                            type="text" 
-                            class="form-control form-control-lg" 
-                            id="firstName" 
-                            name="firstName"
-                            placeholder="Your Name"
-                         />
-                    </div>
+<form class="form-signin needs-validation" novalidate>
+    
+    <div class="signin-section shadow-sm p-3 pt-4">
 
-                    <div class="mb-4 d-flex flex-row align-items-center">
+        <div class="text-center">
+            <img class="mb-4" src="{{url_for('static', filename='nutrimetrics-green-heart.svg')}}" alt="" width="72" height="72">
+            <h1 class="h3 mb-3 font-weight-normal">Sign up</h1>
+        </div>
+        
 
-                        <div class="form-horizontal">
-                            <!-- <label for="email">Email Address</label> -->
-                             <div class="d-flex flex-row align-items-center">
-                                <i class="bi bi-calendar-event-fill fa-lg me-3 fa-fw"></i>
-                                <input 
-                                    type="date" 
-                                    class="form-control form-control-lg" 
-                                    id="email" 
-                                    name="email"
-                                    placeholder="Your Birth Date"
-                                    aria-describedby="emailHelp"
-                                />
-                             </div>
-                        </div>
-
-                        <div class="form-horizontal">
-                            <!-- <label for="firstName">Your Name</label> -->
-                            <div class="d-flex flex-row align-items-center">
-                                <i class="bi bi-gender-ambiguous fa-lg mx-3 fa-fw"></i>
-                                <select class="form-select form-select-lg" id="Sex" aria-label="Select your sex">
-                                    <option class="text-muted" value="" selected hidden  disabled>Sex</option>
-                                    <option value="1">Male</option>
-                                    <option value="2">Female</option>
-                                </select>
-                                <!-- <a href="#" class="d-inline-block" data-bs-toggle="tooltip" data-bs-placement="top" title="Default tooltip">
-                                    <i class="bi bi-info-circle-fill px-3 fa-lg fa-fw"></i>
-                                  </a> -->
-                                <!-- <button type="button" class="btn btn-transparent px-2" style="border-color: #00000000;" data-bs-toggle="tooltip" data-bs-placement="top" title="Tooltip on top">
-                                    <i class="bi bi-info-circle-fill fa-lg fa-fw p-0 m-0"></i>
-                                </button> -->
-                            </div>
-                        </div>
-                    </div>
-                
-                    <div class="form-group mb-4">
-                        <!-- <label for="email">Email Address</label> -->
-                         <div class="d-flex flex-row align-items-center">
-                            <i class="bi bi-envelope-fill fa-lg me-3 fa-fw"></i>
-                        <input 
-                            type="email" 
-                            class="form-control form-control-lg" 
-                            id="email" 
-                            name="email"
-                            placeholder="Your Email"
-                            aria-describedby="emailHelp"
-                         />
-                         </div>
-                         <small id="emailHelp" class="mx-5 form-text text-muted text-center" style="display:block">(We will never share your email, date of birth, or sex with anyone else)</small>
-                    </div>
-                    
-                    <div class="form-group mb-4 d-flex flex-row align-items-center">
-                        <!-- <label for="password1">Password</label> -->
-                        <i class="bi bi-lock-fill fa-lg me-3 fa-fw"></i>
-                        <input 
-                            type="password" 
-                            class="form-control form-control-lg" 
-                            id="password1" 
-                            name="password1"
-                            placeholder="Password"
-                         />
-                    </div>
-                
-                    <div class="form-group mb-4 d-flex flex-row align-items-center">
-                        <!-- <label for="password2">Repeat your password</label> -->
-                        <i class="bi bi-key-fill fa-lg me-3 fa-fw"></i>
-                        <input 
-                            type="password" 
-                            class="form-control form-control-lg" 
-                            id="password2" 
-                            name="password2"
-                            placeholder="Repeat your password"
-                         />
-                    </div>
-                    
-                    <div class="form-check d-flex justify-content-center mb-5">
-                        <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3c" />
-                        <label class="form-check-label fs-5" for="form2Example3">
-                          I agree all statements in <a href="#!">Terms of service</a>
-                        </label>
-                      </div>
-
-                    <div class="d-grid col-6 gap-2 mx-auto">
-                        <button type="submit" class="btn btn-primary btn-lg">Register</button>
-                    </div>
-                </form>
-            </div>
-            <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
-                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp"
-                  class="img-fluid" alt="Sample image">
+        <div class="form-label-group">
+            <input type="text" id="inputFirstName" class="form-control" placeholder="First Name" required autofocus minlength="3">
+            <label for="inputFirstName">First Name</label>
+            <div class="invalid-feedback">
+                Name must be at least 3 characters long.
             </div>
         </div>
+        
+        <div class="form-label-group">
+            <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required>
+            <label for="inputEmail">Email address</label>
+            <div class="valid-feedback">
+            </div>
+        </div>
+        
+        <div class="form-label-group">
+            <input type="password" id="inputPassword1" class="form-control" placeholder="Password" onblur="passwordStrengthCheck(this)" required>
+            <label for="inputPassword1">Password</label>
+            <div class="invalid-feedback">
+            </div>
+        </div>
+
+        <div class="form-label-group">
+            <input type="password" id="inputPassword2" class="form-control" placeholder="Confirm Password" onblur="passwordsMatch(this)" required>
+            <label for="inputPassword2">Confirm Password</label>
+            <div class="invalid-feedback">
+                Passwords don't match
+            </div>
+        </div>
+        
+        <!-- <div class="checkbox mb-4">
+            <label>
+                <input type="checkbox" value="remember-me"> Remember me
+            </label>
+        </div> -->
+
+        <!-- <div class="form-check d-flex justify-content-center mb-5">
+            <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3c" />
+            <label class="form-check-label" for="form2Example3">
+            I agree all statements in <a href="#!">Terms of service</a>
+            </label>
+        </div> -->
+
+        <div class="d-grid mt-4">
+            <button class="btn btn-lg btn-primary btn-block">Next</button>
+        </div>
     </div>
-</div>
+
+    <div class="signin-section shadow-sm p-3">
+
+        <div class="text-center">
+            <h1 class="h3 mb-3 font-weight-normal">Personal details</h1>
+            <p class="mb-0">For more accurate results</p>
+            <p class="mt-0">(recommended)</p>
+        </div>
+
+        <fieldset>
+            <legend for="inputSex form-label">Sex</legend>
+
+            <div class="row">
+                <div class="col d-flex flex-column justify-content-center">
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="inputSex" id="sexMale" checked>
+                        <label class="form-check-label" for="sexMale">Male</label>
+                    </div>
+                </div>
+
+                <div class="col d-flex flex-column justify-content-center">
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="inputSex" id="sexFemale">
+                        <label class="form-check-label" for="sexFemale">Female</label>
+                    </div>
+                </div>
+
+                <div class="col d-flex flex-column justify-content-center">
+                    <div class="form-label-group my-auto">
+                        <select id="inputReproduction" class="form-select floating-select">
+                            <option value="" selected></option>
+                            <option value="1">Pregnant</option>
+                            <option value="2">Breastfeeding</option>
+                        </select>
+                        <label for="inputReproduction">Reproduction</label>
+                    </div>
+                </div>
+
+            </div>
+        </fieldset>
+
+        <fieldset class="mt-4">
+            <legend>Date of birth</legend>
+            <div class="row">
+                <div class="col">
+                    <div class="form-label-group">
+                        <!-- <input 
+                            type="number" 
+                            class="form-control" 
+                            id="birthDay" 
+                            name="birthDay"
+                            placeholder="Day"
+                        /> -->
+                        <select id="dobDay" class="form-select floating-select" onclick="this.setAttribute('value', this.value);" value="" required>
+                            <option class="placeholder-option" value="" selected></option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                            <option value="6">6</option>
+                            <option value="7">7</option>
+                            <option value="8">8</option>
+                            <option value="9">9</option>
+                            <option value="10">10</option>
+                            <option value="11">11</option>
+                            <option value="12">12</option>
+                            <option value="13">13</option>
+                            <option value="14">14</option>
+                            <option value="15">15</option>
+                            <option value="16">16</option>
+                            <option value="17">17</option>
+                            <option value="18">18</option>
+                            <option value="19">19</option>
+                            <option value="20">20</option>
+                            <option value="21">21</option>
+                            <option value="22">22</option>
+                            <option value="23">23</option>
+                            <option value="24">24</option>
+                            <option value="25">25</option>
+                            <option value="26">26</option>
+                            <option value="27">27</option>
+                            <option value="28">28</option>
+                            <option value="29">29</option>
+                            <option value="30">30</option>
+                            <option value="31">31</option>
+                        </select>
+                        <label for="dobDay">Day</label>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="form-label-group">
+                        <select id="dobMonth" class="form-select floating-select" onclick="this.setAttribute('value', this.value);" value="" required>
+                            <option class="placeholder-option" value="" selected></option>
+                            <option value="1">January</option>
+                            <option value="2">February</option>
+                            <option value="3">March</option>
+                            <option value="4">April</option>
+                            <option value="5">May</option>
+                            <option value="6">June</option>
+                            <option value="7">July</option>
+                            <option value="8">August</option>
+                            <option value="9">September</option>
+                            <option value="10">October</option>
+                            <option value="11">November</option>
+                            <option value="12">December</option>
+                        </select>
+                        <label for="dobMonth">Month</label>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="form-label-group">
+                        <input 
+                            type="number" 
+                            class="form-control" 
+                            id="dobYear" 
+                            name="dobYear"
+                            placeholder="Year"
+                            required
+                        />
+                        <label for="dobYear">Year</label>
+                    </div>
+                </div>
+            </div>
+        </fieldset>
+
+        <fieldset>
+            <legend for="inputSex form-label">Weight</legend>
+            
+            <div class="row">
+                <div class="col">
+                    <div class="form-label-group">
+                        <input 
+                            type="number" 
+                            class="form-control" 
+                            id="inputWeight" 
+                            name="inputWeight"
+                            placeholder="Year"
+                            required
+                        />
+                        <label for="inputWeight">Weight</label>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="form-label-group">
+                        <select id="inputWeightUnit" class="form-select floating-select">
+                            <option value="kg" selected>Kilograms</option>
+                            <option value="lb">Pounds</option>
+                        </select>
+                        <label for="inputWeightUnit">Unit</label>
+                    </div>
+                </div>
+            </div>
+        </fieldset>
+    </div>
+    <div class="text-center signin-section shadow-sm p-3">
+        <div class="d-grid">
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
+        </div>
+    </div>
+</form>
+{% endblock %}
+
+{% block scripts %}
+<script src="{{ url_for('static', filename='signup.js')}}"></script>
 {% endblock %}
