--- a/website/static/styles/signup.css
+++ b/website/static/styles/signup.css
@@ -23,30 +23,43 @@ body {
   background-color: #f5f5f5;
 }
 
-.form-signin {
-  width: 100%;
-  max-width: 520px;
-  padding: 15px;
-  margin: 0 auto;
+.form-container {
+  position: relative; 
+  max-width: 430px;
+  margin: 10px;
 }
 
-.signin-section {
+.signup-section {
+  position: relative; 
+  /* top: 30%; */
   width: 100%;
-  /* max-width: 330px; */
   padding: 15px;
   margin: 0 auto;
+  opacity: 1;
+  /* transition: all 1s ease-in-out; */
 }
 
-.form-label-group {
+.signup-section.start-hidden {
+  display: none;
+  /* translate: 100%; */
+  /* opacity: 0; */
+}
+
+.signup-section.hide-section {
+  /* translate: -100%; */
+  opacity: 0;
+}
+
+.form-label-group, .form-group {
   position: relative;
   margin-bottom: 1rem;
 }
 
-.form-signin .checkbox {
+.form-signup .checkbox {
   font-weight: 400;
 }
 
-/* .form-signin .form-control {
+/* .form-signup .form-control {
   position: relative;
   box-sizing: border-box;
   height: auto;
@@ -54,15 +67,15 @@ body {
   font-size: 16px;
 } */
  
-/* .form-signin .form-control:focus {
+/* .form-signup .form-control:focus {
   z-index: 2;
 } */
 
-.form-signin input[id="inputFirstName"] {
+.form-signup input[id="inputFirstName"] {
   margin-bottom: 10px;
 }
 
-.form-signin input[type="email"] {
+.form-signup input[type="email"] {
   margin-bottom: 10px;
 }
 
@@ -70,14 +83,14 @@ body {
   margin-bottom: 0;
 }
 
-.form-signin input[id="inputPassword1"] {
+.form-signup input[id="inputPassword1"] {
   /* margin-bottom: 10px; */
   margin-bottom: -1px;
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
 }
 
-.form-signin input[id="inputPassword2"] {
+.form-signup input[id="inputPassword2"] {
   /* margin-bottom: 10px; */
   border-top-left-radius: 0;
   border-top-right-radius: 0;
@@ -90,7 +103,8 @@ body {
 
 
 .form-label-group > input,
-.form-label-group > label {
+.form-label-group > label,
+.form-group > input {
   padding: var(--input-padding-y) var(--input-padding-x);
   transition: all .1s ease-in-out;
 }
@@ -152,7 +166,7 @@ label {
 .form-label-group input:not(:placeholder-shown) ~ label, .floating-select:focus ~ label , .floating-select:not([value=""]):valid ~ label {
   padding-top: calc(var(--input-padding-y) / 3);
   padding-bottom: calc(var(--input-padding-y) / 3);
-  font-size: 12px;
+  font-size: 0.75rem;
   color: #777;
   cursor: default;
 }
@@ -165,4 +179,16 @@ label {
 .invalid-feedback > p {
   /* margin-top: 0; */
   margin-bottom: 0;
+}
+
+.back-button {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+input[type=radio] {
+  -ms-transform: scale(1.25); /* IE 9 */
+  -webkit-transform: scale(1.25); /* Chrome, Safari, Opera */
+  transform: scale(1.25);
 }
