--- a/website/templates/landing-page/signup.html
+++ b/website/templates/landing-page/signup.html
@@ -14,7 +14,7 @@
     <div class="signup-section col shadow-sm">
     
         <div class="text-center">
-            <img class="mb-4" src="{{url_for('static', filename='nutrimetrics-green-heart.svg')}}" alt="The NutriMetrics logo, a green heart" width="108" height="108">
+            <img class="mb-4" src="{{url_for('static', filename='nutrimetrics-green-heart.svg')}}" alt="NutriMetrics logo" width="108" height="108">
             <h1 class="h3 mb-3 font-weight-normal">Sign Up</h1>
         </div>
         
@@ -64,7 +64,7 @@
         </div> -->
 
         <div class="d-grid mt-4">
-            <button class="btn btn-lg btn-primary btn-block" type="button" onclick="toNextPage(this)">Next</button>
+            <button class="btn btn-lg btn-primary btn-block" id="nextButton" type="button" onclick="toNextPage(this)" disabled>Next</button>
         </div>
     
     </div>
@@ -72,7 +72,7 @@
     <div class="signup-section col start-hidden shadow-sm p-3">
 
         <div class="text-center mb-2">
-            <img class="mb-4" src="{{url_for('static', filename='nutrimetrics-green-heart.svg')}}" alt="The NutriMetrics logo, a green heart" width="108" height="108">
+            <img class="mb-4" src="{{url_for('static', filename='nutrimetrics-green-heart.svg')}}" alt="NutriMetrics logo" width="108" height="108">
             <h1 class="h3 font-weight-normal">Personal details</h1>
             <p class="mb-0">For more accurate insights (recommended)</p>
         </div>
@@ -107,7 +107,7 @@
 
                 <div class="col-4 d-flex flex-column justify-content-center">
                     <div class="form-label-group my-auto" style="visibility: hidden;">
-                        <select id="inputReproduction" class="form-select floating-select">
+                        <select id="inputReproduction" name="inputReproduction" class="form-select floating-select">
                             <option value="" selected></option>
                             <option value="1">Pregnant</option>
                             <option value="2">Breastfeeding</option>
@@ -131,7 +131,7 @@
                             name="birthDay"
                             placeholder="Day"
                         /> -->
-                        <select id="dobDay" class="form-select floating-select" onclick="this.setAttribute('value', this.value);" value="" required>
+                        <select id="dobDay" name="dobDay" class="form-select floating-select" onclick="this.setAttribute('value', this.value);" value="" required>
                             <option class="placeholder-option" value="" selected hidden></option>
                             <option value="1">1</option>
                             <option value="2">2</option>
@@ -171,7 +171,7 @@
 
                 <div class="col">
                     <div class="form-label-group">
-                        <select id="dobMonth" class="form-select floating-select" onclick="this.setAttribute('value', this.value);" value="" required>
+                        <select id="dobMonth" name="dobMonth" class="form-select floating-select" onclick="this.setAttribute('value', this.value);" value="" required>
                             <option class="placeholder-option" value="" selected hidden></option>
                             <option value="1">January</option>
                             <option value="2">February</option>
@@ -225,7 +225,7 @@
                 </div>
                 <div class="col">
                     <div class="form-label-group">
-                        <select id="inputWeightUnit" class="form-select floating-select">
+                        <select id="inputWeightUnit" name="inputWeightUnit" class="form-select floating-select" required>
                             <option value="kg" selected>Kilograms</option>
                             <option value="lb">Pounds</option>
                         </select>
@@ -239,48 +239,59 @@
             <legend for="inputSex form-label">Height</legend>
             
             <div class="row">
-                <div class="col">
-                    <div class="form-group">
-                        <input 
-                            type="number" 
-                            class="form-control" 
-                            id="inputFeet" 
-                            name="inputFeet"
-                            placeholder="5"
-                            required
-                        />
-                        <!-- <label for="inputWeight">Weight</label> -->
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="form-group">
-                        <input 
-                            type="number" 
-                            class="form-control" 
-                            id="inputInches" 
-                            name="inputInches"
-                            placeholder="8"
-                            required
-                        />
-                        <!-- <label for="inputWeight">Weight</label> -->
-                    </div>
-                </div>
-                <div class="col" hidden>
+                <div class="col metric-units">
                     <div class="form-group">
                         <input 
                             type="number" 
                             class="form-control" 
                             id="inputCm" 
                             name="inputCm"
-                            placeholder="170"
+                            value="170"
+                            max="272"
+                            min="30"
                             required
                         />
-                        <!-- <label for="inputWeight">Weight</label> -->
+                    </div>
+                </div>
+                <div class="col imperial-units">
+                    <div class="form-label-group">
+                        <select id="inputFeet" name="inputFeet" class="form-select floating-select" onclick="this.setAttribute('value', this.value);" required>
+                            <option class="placeholder-option" value="" selected hidden></option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                            <option value="6">6</option>
+                            <option value="7">7</option>
+                            <option value="8">8</option>
+                        </select>
+                        <label for="inputFeet">ft</label>
+                    </div>
+                    
+                </div>
+                <div class="col imperial-units">
+                    <div class="form-label-group">
+                        <select id="inputInches" name="inputInches" class="form-select floating-select" onclick="this.setAttribute('value', this.value);" required>
+                            <option class="placeholder-option" value="" selected hidden></option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                            <option value="6">6</option>
+                            <option value="7">7</option>
+                            <option value="8">8</option>
+                            <option value="9">9</option>
+                            <option value="10">10</option>
+                            <option value="11">11</option>
+                        </select>
+                        <label for="inputInches">inches</label>
                     </div>
                 </div>
                 <div class="col-6">
                     <div class="form-label-group">
-                        <select id="inputWeightUnit" class="form-select floating-select">
+                        <select id="inputWeightUnit" class="form-select floating-select" onchange="toggleHeightUnits(this)" value="kg">
                             <option value="kg" selected>cm</option>
                             <option value="lb">feet and inches</option>
                         </select>
