--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -40,7 +40,7 @@
             {% if user.is_authenticated %}
             {{ sidebar(user_name) }}
             {% else %}
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="max-height: 80px;">
+            <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="max-height: 80px;">
                 <button
                     class="navbar-toggler"
                     type="button"
@@ -56,7 +56,7 @@
                         <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
                     </div>
                 </div>
-            </nav>
+            </nav> -->
             {% endif %}
         </div>
 
